# skope

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config-portable.toml
.github/workflows/: release.yml  test.yml
data/: make-test-data.sh  multi.sh  multi.tsv  rsviruses17900.1k.fastq.zst
plot/: con.py  lenhist.py  query.py
src/: classify.rs  containment.rs  fastx.rs  length.rs  lib.rs  main.rs  minimizers.rs  query.rs  stats.rs  syncmers.rs
tests/: tests.rs
