[package]
name = "grate"
version = "0.2.2"
description = "Fast DNA containment analysis"
authors = ["Bede Constantinides <b@bede.im>"]
edition = "2024"
repository = "https://github.com/bede/grate"
homepage = "https://github.com/bede/grate"
keywords = ["bioinformatics", "genomics", "minimizers"]
categories = ["science", "command-line-utilities"]
license = "MIT"

[lints.clippy]
too_many_arguments = "allow"

[features]
# Disable for faster builds.
compression = ["zstd", "liblzma", "flate2"]
# Use to still handle .gz files when "compression" is not enabled.
gz = ["niffler/gz", "flate2", "flate2/default"]
default = ["compression"]

[lib]
name = "grate"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"
rapidhash = "4.1.0"
parking_lot = "0.12"
indicatif = "0.18"

packed-seq = "4.2.0"
simd-minimizers = "2.2.0"

paraseq = { version = "0.4.2", default-features = false, features = ["anyhow", "niffler"] }
niffler = "3"

liblzma = { version = "0.3", optional = true }
flate2 = { version = "1.1", features = ["zlib-rs"], optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = false
debug = false