[package]
name = "skope"
version = "0.1.0"
description = "Accelerated genome containment and abundance estimation"
authors = ["Bede Constantinides <b@bede.im>"]
edition = "2024"
repository = "https://github.com/bede/skope"
homepage = "https://github.com/bede/skope"
keywords = ["bioinformatics", "genomics"]
categories = ["science", "command-line-utilities"]
license = "MIT"

[lints.clippy]
too_many_arguments = "allow"

[features]
# Disable for faster builds.
compression = ["zstd", "liblzma", "flate2"]
# Use to still handle .gz files when "compression" is not enabled.
gz = ["niffler/gz", "flate2", "flate2/default"]
default = ["compression"]

[lib]
name = "skope"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
rayon = "1"
csv = "1.4"
rapidhash = "4.1.0"
parking_lot = "0.12"
indicatif = "0.18"
wincode = "0.4.1"

packed-seq = "4.2.0"
simd-minimizers = "2.3.0"

paraseq = { version = "0.4.2", default-features = false, features = ["anyhow", "niffler"] }
niffler = "3"

liblzma = { version = "0.3", optional = true }
flate2 = { version = "1.1", features = ["zlib-rs"], optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3.24"
nix = { version = "0.30", features = ["fs"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = false
debug = false
